--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 /* --- The App's 'Jail' --- */
 .phone-wrapper {
     width: 100%;
-    height: var(--app-height, 100vh);
+    height: 100%;
    
     position: relative;
     overflow: hidden;
